<resources>
    <string name="app_name" translatable="false">AVNC</string>
    <string name="title_add_server_profile">Add server</string>
    <string name="title_edit_server_profile">Edit server</string>
    <string name="title_duplicate">Duplicate</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="title_clear">Clear</string>
    <string name="title_copy_host">Copy host</string>
    <string name="title_copy_name">Copy name</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_save">Save</string>
    <string name="title_try">Try</string>
    <string name="title_undo">Undo</string>
    <string name="title_settings">Settings</string>
    <string name="title_vnc_login">VNC login</string>
    <string name="title_ssh_login">SSH login</string>
    <string name="title_unlock_private_key">Unlock private key</string>
    <string name="title_forget">Forget</string>
    <string name="title_remember">Remember</string>
    <string name="title_export">Export</string>
    <string name="title_import">Import</string>
    <string name="title_view_only_mode">View-only</string>
    <string name="title_connect_on_app_start">Auto-connect when app starts</string>
    <string name="title_enable_wol">Wake-on-LAN</string>
    <string name="title_hide_remote_cursor">Hide remote pointer</string>
    <string name="title_button_up_delay">Send delayed click events</string>
    <string name="title_resize_remote_desktop">Resize remote session to local window</string>
    <string name="title_image_quality">Image quality</string>
    <string name="title_orientation">Orientation</string>
    <string name="title_image_quality_raw">Raw</string>
    <string name="title_vnc_security">Security</string>
    <string name="title_use_ssh_tunnel">Use SSH tunnel</string>
    <string name="title_always_show_advanced_editor">Always show advanced options</string>
    <string name="title_unknown_ssh_host">Unknown SSH host</string>
    <string name="title_ssh_host_key_changed">SSH host key changed</string>
    <string name="title_continue">Continue</string>
    <string name="title_export_passwords_and_keys">Export passwords and keys</string>
    <string name="title_delete_servers_before_import">Delete current servers before import</string>
    <string name="title_password">Password</string>
    <string name="title_use_repeater">Use repeater</string>
    <string name="title_private_key">Private key</string>
    <string name="title_change">Change</string>
    <string name="title_about">About</string>
    <string name="title_license">Licence</string>
    <string name="title_open_source_libraries">Open source libraries</string>
    <string name="title_report_bug">Report an issue</string>
    <string name="title_source_code">Source code</string>
    <string name="title_unlock_dialog">Unlock to continue</string>
    <string name="title_automatic">Automatic</string>
    <string name="title_none">None</string>
    <string name="title_next">Next</string>
    <string name="title_got_it">Got it</string>
    <string name="title_load_defaults">Load defaults</string>
    <string name="title_select">Select</string>
    <string name="title_select_all">Select all</string>
    <string name="title_multi_viewer">Multi viewer</string>
    <string name="title_stop">Stop</string>
    <string name="title_stop_all">Stop all</string>
    <string name="title_reconnect">Reconnect</string>
    <string name="title_start_selected">Start selected</string>
    <string name="title_sync_input">Sync input</string>
    <string name="title_controls">Controls</string>
    <string name="state_created">Created</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnecting">Disconnecting</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_with_error">%1$s: %2$s</string>
    <string name="hint_urlbar">Connect to a Server</string>
    <string name="hint_server_name">Name (e.g. Work PC)</string>
    <string name="hint_host">Host</string>
    <string name="hint_repeater_host">Repeater host</string>
    <string name="hint_port">Port</string>
    <string name="hint_server_id">Server ID</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_wol_mac">MAC address</string>
    <string name="hint_wol_address">Broadcast address (optional)</string>
    <string name="hint_ssh_host">SSH host</string>
    <string name="hint_ssh_port">SSH port</string>
    <string name="hint_key_password">Key password</string>
    <string name="hint_send_text_to_server">Send text to server</string>
    <string name="msg_about_app">A fast and secure VNC client. Remotely view and control any device running a VNC server.\n\n\nAVNC is an open source and copyleft software — made with help from many contributors.</string>
    <string name="msg_server_profile_added">Server added</string>
    <string name="msg_server_profile_deleted">Server deleted</string>
    <string name="msg_normal_view_mode">Normal mode enabled</string>
    <string name="msg_input_disabled">Input disabled</string>
    <string name="msg_video_disabled">Video disabled</string>
    <string name="msg_gesture_style_locked_to_touchpad">\'Touchpad\' gesture style is active</string>
    <string name="msg_zoom_locked">Zoom locked</string>
    <string name="msg_zoom_unlocked">Zoom unlocked</string>
    <string name="msg_zoom_reset">Zoom reset to 100%</string>
    <string name="msg_zoom_reset_default">Zoom reset to default</string>
    <string name="msg_zoom_saved">Saved current zoom as default</string>
    <string name="msg_pip_not_supported">Not supported on this device</string>
    <string name="msg_ptr_hiding_not_supported">Not supported on this device</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_imported">Imported</string>
    <string name="msg_exported">Exported</string>
    <string name="msg_saved">Saved</string>
    <string name="msg_done">Done</string>
    <string name="msg_export_auth_required">Authenticate to export servers</string>
    <string name="msg_required">Required</string>
    <string name="msg_invalid_mac_address">Invalid MAC address</string>
    <string name="msg_invalid_key_file">Invalid private key file</string>
    <string name="msg_invalid_vnc_uri">Invalid VNC URI</string>
    <string name="msg_copied_to_clipboard">Copied</string>
    <string name="msg_no_saved_servers">No saved servers</string>
    <string name="msg_no_servers_selected">No servers selected</string>
    <string name="msg_connection_aborted">Connection aborted</string>
    <string name="msg_tap_to_select_a_key">Tap to select a key:</string>
    <string name="msg_button_up_delay_help">Delaying click events can help in some rare cases if an app is not responding to clicks.</string>
    <string name="msg_wake_on_lan_help">Wake-on-LAN can be used to remotely power-on a computer.\n\nFirst, configure WoL on remote computer, then enable it in AVNC.\nOnce enabled, WoL magic packet will be automatically sent before connecting to this server.</string>
    <string name="msg_gesture_style_help"><b>Touchscreen</b>\nDo actions at touch-point \n\n<b>Touchpad</b>\nDo actions at pointer</string>
    <string name="msg_drag_gesture_help">Assigning an action to this gesture will change Long press detection:\n\n<b>Press-hold-release</b> → Long press\n<b>Press-hold-swipe</b> → Long press and swipe</string>
    <string name="msg_shortcut_server_deleted">This server has been deleted</string>
    <string name="tip_empty_server_list">Server list is empty.\nClick \'<b>+</b>\' to add a server, or\nuse the top address bar to connect directly.</string>
    <string name="tip_urlbar">You can enter IP address, hostname, or \'vnc://\' URI.</string>
    <string name="tip_discovery">Discovery can automatically find supported servers\nrunning on your network.</string>
    <string name="msg_viewer_tips_label">Couple of tips to get you started</string>
    <string name="tip_toolbar_usage">Swipe-in from edge to open the toolbar. Use it to open keyboard, change gesture style, or reset zoom.</string>
    <string name="tip_session_end">To end a session, tap on the Back navigation button, just like you would go back from a playing video.</string>
    <string name="desc_navigation_btn">Open navigation drawer</string>
    <string name="desc_settings_btn">Settings</string>
    <string name="desc_saved_servers_tab">Saved servers</string>
    <string name="desc_discovered_servers_tab">Discovered servers</string>
    <string name="desc_add_new_server_btn">Add server</string>
    <string name="desc_save_discovered_server_btn">Save</string>
    <string name="desc_discovery_btn">Discover servers</string>
    <string name="desc_discovery_stop_btn">Stop discovering servers</string>
    <string name="desc_discovery_running">Discovering servers on you network</string>
    <string name="desc_toolbar_btn">Open toolbar</string>
    <string name="desc_keyboard_btn">Open keyboard</string>
    <string name="desc_virtual_keys_btn">Show virtual keys</string>
    <string name="desc_view_modes_toggle">View modes</string>
    <string name="desc_view_mode_normal">Normal mode</string>
    <string name="desc_view_mode_no_input">Disable all inputs</string>
    <string name="desc_view_mode_no_video">Disable video</string>
    <string name="desc_zoom_options_btn">Zoom options</string>
    <string name="desc_reset_zoom_btn">Reset zoom</string>
    <string name="desc_lock_zoom_btn">Lock zoom</string>
    <string name="desc_save_zoom_btn">Save current zoom as default</string>
    <string name="desc_retry_connection_btn">Reconnect</string>
    <string name="desc_back_btn">Back</string>
    <string name="desc_clear_url_btn">Clear</string>
    <string name="desc_server_url">Server address</string>
    <string name="desc_help_btn">Help</string>
    <string name="desc_discovered_list">List of automatically discovered servers</string>
    <string name="desc_saved_servers_list">List of saved Servers</string>
    <string name="pref_ui">Interface</string>
    <string name="pref_ui_summary">Look and feel</string>
    <string name="pref_viewer">Viewer</string>
    <string name="pref_viewer_summary">Picture-in-picture, zoom</string>
    <string name="pref_input">Input</string>
    <string name="pref_input_summary">Gestures, mouse, virtual keys</string>
    <string name="pref_servers">Servers</string>
    <string name="pref_server_summary">Login, discovery</string>
    <string name="pref_tools">Tools</string>
    <string name="pref_tools_summary">Import/Export, debugging</string>
    <string name="pref_experimental">Experimental</string>
    <string name="pref_experimental_summary">Extra goodies</string>
    <string name="pref_gesture_action_none" translatable="false">@string/title_none</string>
    <string name="pref_gesture_action_left_click">Left-click</string>
    <string name="pref_gesture_action_left_press">Long-press</string>
    <string name="pref_gesture_action_middle_click">Middle-click</string>
    <string name="pref_gesture_action_right_click">Right-click</string>
    <string name="pref_gesture_action_double_click">Double-click</string>
    <string name="pref_gesture_action_move_pointer">Move pointer</string>
    <string name="pref_gesture_action_pan">Pan local frame</string>
    <string name="pref_gesture_action_remote_scroll">Scroll remote content</string>
    <string name="pref_gesture_action_remote_drag">Drag remote content</string>
    <string name="pref_gesture_action_remote_drag_middle">Drag with middle button</string>
    <string name="pref_gesture_action_remote_back_press">Back-press on server</string>
    <string name="pref_gesture_action_open_keyboard">Open keyboard</string>
</resources>