<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020  Gaurav Ujjwal.
  ~
  ~ SPDX-License-Identifier:  GPL-3.0-or-later
  ~
  ~ See COPYING.txt for more details.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gaurav.avnc.viewmodel.HomeViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/servers_rv"
            style="@style/ServerList"
            android:layout_width="match_parent"
            app:isVisible="@{!viewModel.serverProfiles.empty}"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_saved_servers_list"
            tools:listitem="@layout/server_saved_item" />

        <TextView
            style="@style/TipView"
            android:text="@string/tip_empty_server_list"
            android:visibility="gone"
            app:isVisible="@{viewModel.serverProfiles.empty}"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_normal"
            android:gravity="end"
            android:orientation="horizontal"
            app:isVisible="@{!viewModel.profileSelectionMode}">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:onClick="@{()-> viewModel.beginProfileSelection()}"
                android:text="@string/title_select"
                app:icon="@drawable/ic_broadcast" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_add_new_server_btn"
                android:onClick="@{()-> viewModel.onNewProfile()}"
                android:src="@drawable/ic_plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_normal"
            android:gravity="end"
            android:orientation="horizontal"
            app:isVisible="@{viewModel.profileSelectionMode}">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:onClick="@{()-> viewModel.clearProfileSelection()}"
                android:text="@string/title_cancel"
                app:icon="@drawable/ic_clear" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()-> viewModel.startSelectedConnections()}"
                android:text="@string/title_start_selected"
                app:icon="@drawable/ic_broadcast"
                app:isVisible="@{!viewModel.selectedProfileIds.empty}" />
        </LinearLayout>
    </FrameLayout>
</layout>
